apps/web-user/envs/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-user
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - cine.io.vn
      secretName: cine-io-vn-tls
  rules:
    - host: cine.io.vn
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-user
                port:
                  name: http
